--- a/com.vzhd1701.gridplayer.yml
+++ b/com.vzhd1701.gridplayer.yml
@@ -2,8 +2,6 @@ app-id: "com.vzhd1701.gridplayer"
 runtime: org.kde.Platform
 runtime-version: "5.15-23.08"
 sdk: org.kde.Sdk
-base: com.riverbankcomputing.PyQt.BaseApp
-base-version: '5.15-23.08'
 command: "gridplayer"
 finish-args:
 # OpenGL
@@ -37,6 +35,8 @@ cleanup:
 - "/share/man"
 
 modules:
+- python.yml
+- pyqt.yml
 - libvlc.yml
 - dependencies.yml
 - name: poetry-core
